RESOLVED FIXED 77855
ValueToNumber and ValueToDouble nodes don't do anything and should be removed
https://bugs.webkit.org/show_bug.cgi?id=77855
Summary ValueToNumber and ValueToDouble nodes don't do anything and should be removed
Filip Pizlo
Reported 2012-02-05 23:20:04 PST
If we have a and b both predicted number, then the following sequence: 1: ValueToNumber(a) 2: ValueToNumber(b) 3: ArithSub(@1, @2) should be turned into: 1: ValueToNumberPure(a) (skipped) 2: ValueToNumberPure(b) (skipped) 3: ArithSub(a, b) and hence we skip two moves and save a register.
Attachments
the patch (14.84 KB, patch)
2012-02-06 00:44 PST, Filip Pizlo
barraclough: review+
the patch (21.50 KB, patch)
2012-02-06 16:04 PST, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-02-05 23:56:23 PST
Filip Pizlo
Comment 2 2012-02-06 00:44:16 PST
Created attachment 125590 [details] the patch
Filip Pizlo
Comment 3 2012-02-06 16:04:26 PST
Created attachment 125721 [details] the patch
Filip Pizlo
Comment 4 2012-02-06 17:10:15 PST
Note You need to log in before you can comment on or make changes to this bug.